--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Goup 1</title>
-    <link rel="stylesheet" href="style_Maquette1.css">
+    <link rel="stylesheet" href="styleform.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Barlow+Condensed:wght@200&family=Montserrat:wght@200&family=Nunito:wght@300&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
                                 <input type="email" name="email" id="emailinput" placeholder="contact@demo.fr">
                     <pre></pre>
                                     <!--Nationalié-->
-                            <label for="Country"><strong>Nationalité :</strong></label>
+                            <label><strong>Nationalité :</strong></label>
                                     <select name="country" id="country">
                                         <option value="France" selected="selected">France </option>
         
