--- a/post.html
+++ b/post.html
@@ -18,7 +18,7 @@
     <header>
         <img src="image/logo.png" alt="Logo Squedrong" id="logo">
        <nav>
-        <a href="" class="lien">BLOG</a> 
+        <a href="" id="blog">BLOG</a> 
         <a href="" class="lien">CV</a> 
         <a href="" class="lien">A PROPOS</a> 
         <a href="" class="lien">CONTACT</a>
