HTML CSS et image

--- a/apropos.html
+++ b/apropos.html
@@ -15,7 +15,7 @@
 </head>
     <body>
     <header>
-        <img src="image/logo.png" alt="Logo Squedrong" id="logo">
+        <img src="images/logo.png" alt="Logo Squedrong" id="logo">
        <nav>
         <a href="" class="lien">BLOG</a> 
         <a href="" class="lien">CV</a> 
@@ -42,7 +42,7 @@
                 <br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam reiciendis.
         </div>
-        <div class="illustration"><img src="image/illustration.png" alt="illustration" id="illustration"></div>
+        <div class="illustration"><img src="images/illustration.png" alt="illustration" id="illustration"></div>
     </div>
     </body>
 </html>
