--- a/post.html
+++ b/post.html
@@ -16,7 +16,7 @@
 </head>
     <body>
     <header>
-        <img src="image/logo.png" alt="Logo Squedrong" id="logo">
+        <img src="images/logo.png" alt="Logo Squedrong" id="logo">
        <nav>
         <a href="" id="blog">BLOG</a> 
         <a href="" class="lien">CV</a> 
@@ -25,7 +25,7 @@
        </nav>
     </header>
        <main>
-        <img src="image/Mac.png" alt="" id="mac">
+        <img src="images/Mac.png" alt="" id="mac">
         <h1>BLOG DETAILS H1</h1>
         <p id="parah1">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
@@ -95,10 +95,10 @@
                     eligendi iure consequuntur, ad id suscipit illum iusto. Optio dolorum magnam minus iure. Cum.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam reiciendis.
             </div>
-            <div class="twitter"><a href="https://twitter.com" id="lientwitter" title="Mon Twitter"><img src="image/Emblème-Twitter.jpg" alt="Logo Twitter" id="twitter" title="Mon Twitter">TWITTER</a></div>
-            <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="image/linkedin-logo_578229-227.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
-            <div class="medium"><a href="https://medium.com/" id="lienmedium" title="Mon profil Medium"><img src="image/téléchargement.png" alt="Logo medium" id="medium" title="Mon profil Medium">MEDIUM</a></div>
-            <div class="illustration"><img src="image/illustration.png" alt="illustration" id="illustration"></div>
+            <div class="twitter"><a href="https://twitter.com" id="lientwitter" title="Mon Twitter"><img src="images/Emblème-Twitter.jpg" alt="Logo Twitter" id="twitter" title="Mon Twitter">TWITTER</a></div>
+            <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="images/linkedin-logo_578229-227.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
+            <div class="medium"><a href="https://medium.com/" id="lienmedium" title="Mon profil Medium"><img src="images/téléchargement.png" alt="Logo medium" id="medium" title="Mon profil Medium">MEDIUM</a></div>
+            <div class="illustration"><img src="images/illustration.png" alt="illustration" id="illustration"></div>
         </div>
     </footer>
        
