--- a/form.html
+++ b/form.html
@@ -9,23 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Barlow+Condensed:wght@200&family=Montserrat:wght@200&family=Nunito:wght@300&display=swap" rel="stylesheet">
-
 </head>
-<body>
-    <main>
-        <header>
-            <!-- logo -->
-            <nav>
-                <img src="images/logo.png" alt="Logo">
-                <ul>
-                    <li><a href="#" style="font-weight: bold;">BLOG</a></li>
-                    <li><a href="#">CV</a></li>
-                    <li><a href="#">A PROPOS</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </nav>
-        </header>
 
+<body>
+    <header>
+        <img src="logo.png" alt="Logo Squedrong" id="logo">
+       <nav>
+        <a href="" class="lien">BLOG</a> 
+        <a href="" class="lien">CV</a> 
+        <a href="" class="lien">A PROPOS</a> 
+        <a href="" class="lien">CONTACT</a>
+       </nav>
+    </header>
 
                     <form method="post">
                 <fieldset><h2 class="contactez-nous">Contactez-nous</h2>
@@ -340,6 +335,5 @@
                         <div class="bouton">
                                 <input class="envoyer" type="submit" value="Envoyer">
                         </div>
-    </main>
 </body>
 </html>
