--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="logo.png" alt="Logo Squedrong" id="logo">
+        <img src="images/logo.png" alt="Logo Squedrong" id="logo">
        <nav>
         <a href="" class="lien">BLOG</a> 
         <a href="" class="lien">CV</a> 
