--- a/form.html
+++ b/form.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Goup 1</title>
-    <link rel="stylesheet" href="styleform.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Barlow+Condensed:wght@200&family=Montserrat:wght@200&family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anuphan&family=Fira+Sans:wght@100;400&family=Montserrat&display=swap" rel="stylesheet">
+
+
+
 </head>
 
 <body>
-    <header>
-        <img src="images/logo.png" alt="Logo Squedrong" id="logo">
-       <nav>
-        <a href="" class="lien">BLOG</a> 
-        <a href="" class="lien">CV</a> 
-        <a href="" class="lien">A PROPOS</a> 
-        <a href="" class="lien">CONTACT</a>
-       </nav>
+    <header class="header1">
+        <img src="images/logo.png" alt="Logo Squedrong" id="logo3">
+        
+        <nav class="nav1">
+         <a href="accueil.html" class="lien">BLOG</a>
+         <a href="post.html" class="lien">CV</a> 
+         <a href="apropos.html" class="lien">A PROPOS</a> 
+         <a href="form.html" class="lien">CONTACT</a>
+        </nav>
     </header>
 
                     <form method="post">
