--- a/post.html
+++ b/post.html
@@ -15,18 +15,19 @@
     <title>Post</title>
 </head>
     <body>
-    <header>
+    <header class="header3">
         <img src="images/logo.png" alt="Logo Squedrong" id="logo">
-       <nav>
-        <a href="" id="blog">BLOG</a> 
-        <a href="" class="lien">CV</a> 
-        <a href="" class="lien">A PROPOS</a> 
-        <a href="" class="lien">CONTACT</a>
-       </nav>
+        
+        <nav class="nav3">
+         <a href="accueil.html" class="lien">BLOG</a> 
+         <a href="post.html" class="lien">CV</a> 
+         <a href="apropos.html" class="lien">A PROPOS</a> 
+         <a href="form.html" class="lien">CONTACT</a>
+        </nav>
     </header>
        <main>
         <img src="images/Mac.png" alt="" id="mac">
-        <h1>BLOG DETAILS H1</h1>
+        <h1 class="h111">BLOG DETAILS H1</h1>
         <p id="parah1">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
@@ -45,7 +46,7 @@
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
         </p>
-        <h2>BLOG DETAILS H2</h2>
+        <h2 class="h222">BLOG DETAILS H2</h2>
         <p id="parah2">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
@@ -89,8 +90,8 @@
         </p>
     </main>
     <footer>
-        <div class="grid">
-            <div class="apropos"><h4>A propos de l'auteur :</h4>
+        <div class="grid1">
+            <div class="apropos2"><h4>A propos de l'auteur :</h4>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem iste doloribus excepturi delectus eum nisi quia,
                     eligendi iure consequuntur, ad id suscipit illum iusto. Optio dolorum magnam minus iure. Cum.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam reiciendis.
@@ -98,7 +99,7 @@
             <div class="twitter"><a href="https://twitter.com" id="lientwitter" title="Mon Twitter"><img src="images/Emblème-Twitter.jpg" alt="Logo Twitter" id="twitter" title="Mon Twitter">TWITTER</a></div>
             <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="images/linkedin-logo_578229-227.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
             <div class="medium"><a href="https://medium.com/" id="lienmedium" title="Mon profil Medium"><img src="images/téléchargement.png" alt="Logo medium" id="medium" title="Mon profil Medium">MEDIUM</a></div>
-            <div class="illustration"><img src="images/illustration.png" alt="illustration" id="illustration"></div>
+            <div class="illustration2"><img src="images/illustration.png" alt="illustration" id="illustration2"></div>
         </div>
     </footer>
        
