--- a/post.html
+++ b/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,79 +29,104 @@
         <img src="images/Mac.png" alt="" id="mac">
         <h1 class="h111">BLOG DETAILS H1</h1>
         <p id="parah1">
+
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
         </p>
-        <h2 class="h222">BLOG DETAILS H2</h2>
+
+
+    <h2 class="h222">BLOG DETAILS H2</h2>
+
         <p id="parah2">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
         </p>
-        <h3>BLOG DETAILS H3</h3>
+
+    <h3>BLOG DETAILS H3</h3>
         <p id="parah3">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis architecto ipsa labore explicabo pariatur, dolor non dignissimos autem suscipit dolore magnam. Ab, minus! Velit aperiam perferendis accusantium, ullam ex maxime!
             Optio illum tempora ut consequatur eaque delectus, pariatur tempore voluptatem reiciendis, nisi nostrum modi repudiandae nobis enim perspiciatis, quidem corrupti maxime deserunt. Voluptatum neque suscipit delectus at quis minus omnis!
             Provident quo molestias fugit temporibus quasi. Est illum ab nam accusantium non ipsum, alias cumque deleniti adipisci tempore, earum ducimus ad hic aliquid necessitatibus unde? Iste quasi corrupti numquam adipisci!
             Nemo eaque possimus tempore aliquid excepturi beatae delectus impedit asperiores cupiditate sed, ab aliquam in eum voluptas nostrum temporibus optio laborum ducimus doloremque et! Veniam ad modi qui. Quae, voluptatum.
             <br>
+
             <br>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut blanditiis, animi dolore quos mollitia dolores architecto explicabo? Porro architecto quae deleniti iusto commodi, odio assumenda eum explicabo soluta molestias perferendis?
             Ratione quasi beatae optio. Reiciendis ex distinctio dignissimos error odio porro voluptate aspernatur adipisci nesciunt atque officia ut nobis, harum explicabo quidem reprehenderit, ab ipsum molestias commodi quos quae praesentium.
         </p>
+
     </main>
+
     <footer>
+
         <div class="grid1">
+
             <div class="apropos2"><h4>A propos de l'auteur :</h4>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem iste doloribus excepturi delectus eum nisi quia,
                     eligendi iure consequuntur, ad id suscipit illum iusto. Optio dolorum magnam minus iure. Cum.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam reiciendis.
             </div>
+
+
             <div class="twitter"><a href="https://twitter.com" id="lientwitter" title="Mon Twitter"><img src="images/Emblème-Twitter.jpg" alt="Logo Twitter" id="twitter" title="Mon Twitter">TWITTER</a></div>
+
             <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="images/linkedin-logo_578229-227.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
+
             <div class="medium"><a href="https://medium.com/" id="lienmedium" title="Mon profil Medium"><img src="images/téléchargement.png" alt="Logo medium" id="medium" title="Mon profil Medium">MEDIUM</a></div>
+
             <div class="illustration2"><img src="images/illustration.png" alt="illustration" id="illustration2"></div>
+
         </div>
+
+
     </footer>
        
     </body>
+
 </html>
