vraiment finito finito de chez finito

--- a/CV.html
+++ b/CV.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,21 +14,21 @@
 
     <title>Post</title>
 </head>
-    <body>
+    <body class="fond">
 
-    <header>
-        <img src="images/logo.png" alt="Logo Squedrong" id="logo">
-       <nav>
-        <a href="" id="blog">BLOG</a> 
-        <a href="" class="lien">CV</a> 
-        <a href="" class="lien">A PROPOS</a> 
-        <a href="" class="lien">CONTACT</a>
+    <header class="header4">
+        <img src="images/logo.png" alt="Logo Squedrong" id="logo4">
+       <nav class="nav4">
+        <a href="blog.html" class="lien">BLOG</a> 
+        <a href="post.html" class="lien">CV</a> 
+        <a href="apropos.html" class="lien">A PROPOS</a> 
+        <a href="form.html" class="lien">CONTACT</a>
        </nav>
     </header>
 
-    <main>
 
     <div class="présentation">
+    <h3 class="titre-présentation">Alexis Marquant</h3>
         <div class="Alexis">
             <img src="images/Profil_Alexis.jpg" alt="Profil Alexis">
                 <p>Je m'appelle Alexis Marquant, je vis à Valenciennes, j'ai fait mes quatre années de collèges au Collège Watteau à Valenciennes, 
@@ -37,20 +37,29 @@
                     Linkin Park et beaucoup d'autre).</p>
         </div>
 
+    <h3 class="titre-présentation" id="Titre-Benoit">Benoît Deudon</h3>
         <div class="Benoit">
             <img src="images/Profil_Benoit.png" alt="Profil Benoit">
-                <p></p>
+                <p>Je crois que je m'appelle Benoit Deudon, je me situe actuellement dans un endroit paumé qui répond au nom de La Sentinelle. 
+                    Les années se sont succédées et avec elles des diplômes mais aussi des expériences qui garnissent davantage mon CV. 
+                    Quels diplômes me diriez vous , "eh bien" un dut GEA, une licence administration publique  et presque un master aux différents 
+                    instituts que composent les Tertiales de Valenciennes. Je n'ai pas particulièrement de passion ou de hobbits je me contente 
+                    simplement de passer le temps.</p>
         </div>
 
+    <h3 class="titre-présentation">Cécile Huriaux</h3>
         <div class="Cecile">
             <img src="images/Profil_Cecile.jpg" alt="Profil Cecile">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Illo libero earum saepe ad facilis non, quia odio temporibus repellat reprehenderit. 
-                    Odio atque assumenda commodi expedita beatae repellendus sint consectetur ratione!</p>
+                    Odio atque assumenda commodi expedita beatae repellendus sint consectetur ratione! 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo libero earum saepe ad facilis non, 
+                    quia odio temporibus repellat reprehenderit. Odio atque assumenda commodi expedita beatae repellendus 
+                    sint consectetur ratione!</p>
         </div>
     </div>
 
-    </main>
+
        
     </body>
 </html>
