--- a/apropos.html
+++ b/apropos.html
@@ -26,6 +26,8 @@
            </nav>
        </nav>
     </header>
+
+
     <div class="grid">
         <div class="apropos">
             <h4>A propos de l'auteur :</h4>
@@ -46,6 +48,15 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam reiciendis.
         </div>
         <div class="illustration1"><img src="images/illustration.png" alt="illustration" id="illustration1"></div>
+
+        <div class="nous">
+            <a href="CV.html">A propos de nous</a>
+        </div>
+
     </div>
+
+
+
+    
     </body>
 </html>
