--- a/post.html
+++ b/post.html
@@ -116,7 +116,7 @@
 
             <div class="twitter"><a href="https://twitter.com" id="lientwitter" title="Mon Twitter"><img src="images/Emblème-Twitter.jpg" alt="Logo Twitter" id="twitter" title="Mon Twitter">TWITTER</a></div>
 
-            <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="images/linkedin-logo_578229-227.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
+            <div class="linkedin"><a href="https://fr.linkedin.com/" id="lienlinkedin" title="Mon Linkedin"><img src="images/linkedin3.jpg" alt="Logo linkedin" id="linkedin" title="Mon Linkedin">LINKEDIN</a></div>
 
             <div class="medium"><a href="https://medium.com/" id="lienmedium" title="Mon profil Medium"><img src="images/téléchargement.png" alt="Logo medium" id="medium" title="Mon profil Medium">MEDIUM</a></div>
 
